footer-section-added

--- a/index.html
+++ b/index.html
@@ -311,7 +311,26 @@
 
       </section>
       <!-- popular collection end 04 -->
+      <!-- journey section start 02 -->
+      <!-- journey section end   02   -->
     </main>
+      <!-- footer start 02 -->
+      <footer>
+         <div class="footer-portion">
+             <h3>consumer products</h3>
+             <p>copyright © 2022 consumer's products</p>
+             <p>all right reserved</p>
+             <div class="icons">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-youtube"></i>
+                <i class="fab fa-whatsapp-square"></i>
+             </div>
+         </div>
+      </footer>
+      <!-- footer end  02 -->
+
+
 </body>
 </html>
        <!-- journey section start 02 -->
