--- a/index.html
+++ b/index.html
@@ -14,51 +14,57 @@
 <body>
     <main>
         <!-- header section start 01 -->
-        <header>
-            <div class="header-area">
-                <div class="header-logo">
-                    <h3>Electronic products</h3>
-                </div>
-                <div class="nav">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">products</a></li>
-                        <li><a href="#">sign up</a></li>
-                        <li><a href="#">log in</a></li>
-                        <li><a href="#"><i class="fas fa-search"></i></a></li>
-                        <li><a href="#"><i class="fas fa-cart-plus"></i></a></li>
-                    </ul>
+        <header >
+            <div class="header-portion">
+                <div class="header-area">
+                    <div class="header-logo">
+                        <h3>Electronic products</h3>
+                    </div>
+                    <div class="nav">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#">products</a></li>
+                            <li><a href="#">sign up</a></li>
+                            <li><a href="#">log in</a></li>
+                            <li><a href="#"><i class="fas fa-search"></i></a></li>
+                            <li><a href="#"><i class="fas fa-cart-plus"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </header>
         <!-- header section end 01 -->
          <!-- journey section start 02 -->
          <section class="section-padding">
-             <div class="journey-portion">
-                 <div class="journey-content">
-                     <h1>start your journey as  consumer</h1>
-                     <p>Electronic equipment are every where. It has become an assential part of our lives. Without electronics, we cannot think our improvement.</p>
-                     <a href="#"><button>prebook now <i class="fas fa-arrow-circle-right"></i></button></a>
-                 </div>
-                 <div class="journey-images">
-                     <img src="images/main-camera.png" alt="cameara">
-                 </div>
-             </div>
+            <div class="journey-area">
+                <div class="journey-portion">
+                    <div class="journey-content">
+                        <h1>start your journey as  consumer</h1>
+                        <p>Electronic equipment are every where. It has become an assential part of our lives. Without electronics, we cannot think our improvement.</p>
+                        <a href="#"><button>prebook now <i class="fas fa-arrow-circle-right"></i></button></a>
+                    </div>
+                    <div class="journey-images">
+                        <img src="images/main-camera.png" alt="cameara">
+                    </div>
+                </div>
+            </div>
          </section>
          <!-- journey section end 02 -->
          <!-- brand section start 03 -->
          <section class="brand">
              <hr>
-           <div class="brand-portion">
-               <img src="logos/Alibaba.svg" alt="">
-               <img src="logos/Amazon.svg" alt="">
-               <img src="logos/Daraz.pk Logo.svg" alt="">
-               <img src="logos/Ebay.svg" alt="">
-               <img src="logos/Rakuten.svg" alt="">
-               <img src="logos/Target.svg" alt="">
-               <img src="logos/Walmart.svg" alt="">
-           </div>
+             <div class="brand-area">
+                <div class="brand-portion">
+                    <img src="logos/Alibaba.svg" alt="">
+                    <img src="logos/Amazon.svg" alt="">
+                    <img src="logos/Daraz.pk Logo.svg" alt="">
+                    <img src="logos/Ebay.svg" alt="">
+                    <img src="logos/Rakuten.svg" alt="">
+                    <img src="logos/Target.svg" alt="">
+                    <img src="logos/Walmart.svg" alt="">
+                </div>
+             </div>
            <hr>
          </section>
          <!-- brand section end 03 -->
@@ -313,22 +319,24 @@
       <!-- popular collection end 04 -->
       <!-- journey section start 02 -->
       <!-- journey section end   02   -->
+
+        <!-- footer start 02 -->
+        <footer>
+            <div class="footer-portion">
+                <h3>consumer products</h3>
+                <p>copyright © 2022 consumer's products</p>
+                <p>all right reserved</p>
+                <div class="icons">
+                   <i class="fab fa-instagram"></i>
+                   <i class="fab fa-twitter-square"></i>
+                   <i class="fab fa-youtube"></i>
+                   <i class="fab fa-whatsapp-square"></i>
+                </div>
+            </div>
+         </footer>
+         <!-- footer end  02 -->
     </main>
-      <!-- footer start 02 -->
-      <footer>
-         <div class="footer-portion">
-             <h3>consumer products</h3>
-             <p>copyright © 2022 consumer's products</p>
-             <p>all right reserved</p>
-             <div class="icons">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter-square"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-whatsapp-square"></i>
-             </div>
-         </div>
-      </footer>
-      <!-- footer end  02 -->
+    
 
 
 </body>
